fix: align with guidelines

--- a/packages/components/src/Actions/ActionIconToggle/ActionIconToggle.scss
+++ b/packages/components/src/Actions/ActionIconToggle/ActionIconToggle.scss
@@ -37,7 +37,6 @@ $tc-icon-toggle-icon-size: $svg-sm-size !default;
 	&:hover,
 	&:active {
 		box-shadow: none;
-		background-color: $white;
 		border-color: $scooter;
 		color: $scooter;
 	}
