--- a/packages/components/src/SubHeaderBar/SubHeaderBar.scss
+++ b/packages/components/src/SubHeaderBar/SubHeaderBar.scss
@@ -14,15 +14,17 @@ $tc-svg-icon-size: $padding-large !default;
 	width: 100%;
 
 	button {
-		&:global(.btn-link) {
-			color: $tc-subheader-color;
+		:global {
+			.btn-link:not(.tc-icon-toggle) {
+				color: $tc-subheader-color;
 
-			&:focus,
-			&:hover {
-				color: $tc-subheader-hover-focus-color;
-			}
-			&:active {
-				color: $tc-subheader-active-color;
+				&:focus,
+				&:hover {
+					color: $tc-subheader-hover-focus-color;
+				}
+				&:active {
+					color: $tc-subheader-active-color;
+				}
 			}
 		}
 	}
